# android_player

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ffmepeg/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_channel.cpp  audio_channel.h  base_channel.cpp  base_channel.h  ffmpeg.cpp  ffmpeg.h  java_call_helper.cpp  java_call_helper.h  macro.cpp  macro.h  native-lib.cpp  safe_queue.cpp  safe_queue.h  video_channel.cpp  video_channel.h
app/src/main/java/com/ffmpeg/sample/: MainActivity.kt  Player.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ffmepeg/sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
